--- a/application-express/public/stylesheets/styles.css
+++ b/application-express/public/stylesheets/styles.css
@@ -1,20 +1,20 @@
 .imgErreurCentrer {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	margin-top: -358px;
-	margin-left: -400px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -358px;
+    margin-left: -400px;
 }
 
 #saveEditor
 {
     width: 412px;
-	min-width: 350px;
-	height: 240px;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
-	border: 10px solid #fff;
-	border: 10px solid rgba(255, 255, 255, 0.9);
-	background: white;
+    min-width: 350px;
+    height: 240px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
+    border: 10px solid #fff;
+    border: 10px solid rgba(255, 255, 255, 0.9);
+    background: white;
 }
 
 #thumbnails-pages a.thumbnail {
@@ -29,8 +29,9 @@
     font-size: 3em;
 }
 
-/* TODO: gabarit de la presentation 
- genre...
-background: #002E5C;
-	color : white;
-*/
+/* gabarit de la presentation (TODO: À completer avant la presentation!) */
+
+#impress .step {
+    font-size: 3em;
+}
+
