Modifs de look seulement: -enlever le bouton partager de consulter pour enseignant, pas dans SRS, enlever le bouton démarrer présentation de editer-page, tel que discuté dans email, changé les boutons qui apparaissent dans l'éditeur wysiwyg pour ajouter l'option de voir le code source

--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -11,7 +11,7 @@ block contenu
   section#interface-primaire.span6
     ul.breadcrumb
       li
-        a#presentationID(href='') #{presentationTitre}
+        a#presentationID(href='#') #{presentationTitre}
         span.divider /
       li
         span Page 
@@ -23,9 +23,6 @@ block contenu
       li
         form(action='/presentation')
           button.btn(type='submit') Mode Consulter
-      li
-        a(href="#") 
-          button.btn#start_full Démarrer la présentation 
       li
         form(action='/partager-presentation')
           button.btn(type='submit') Partager
