Si on ne rentre pas au moins un caractère pour la recherche, le bouton ne fait rien (et petite correction de français... M. XX au lieu de Mr. XX)

--- a/application-express/views/navbar-admin.jade
+++ b/application-express/views/navbar-admin.jade
@@ -15,7 +15,7 @@ block navbar
       ul.nav.pull-right
         li.dropdown
           a.dropdown-toggle(data-toggle='dropdown', href='#')
-            | Mr. Admin
+            | M. Admin
             b.caret
           ul.dropdown-menu
             li
