--- a/application-express/views/recherche.jade
+++ b/application-express/views/recherche.jade
@@ -20,15 +20,15 @@ head
         tbody
             tr
                 td 
-                    a(href="#") Présentation 2.1
-                td
+                    a(href="#") INF4170 MultiCycle
+                td  Jacques Berger
             tr.info
                 td 
-                    a(href="#") Présentation 2.2
-                td
+                    a(href="#") INF4375 Node
+                td Jacques Berger
             tr
                 td 
-                    a(href="#") XML: Quossé ça?
+                    a(href="#") INF2005 JS2
                 td Jacques Berger
                
 
