Modification d'interface : - Breadcrumb du path dans l'Arborescence se met a jour proprement quand on   load un page. - Retirer le numero des page sur les thumbnails de la page   consulter une presentation - Le file chooser pour importer une liste ne s'affiche plus sur un gros   bouton inutile. - Sur la page d'edition, remplacer les alerts de javascript par des alerts   de bootstrap. - Changer 'Exporter une presentation' pour 'Exporter' sur la page de   consulter une presentation

--- a/application-express/views/accueil.jade
+++ b/application-express/views/accueil.jade
@@ -18,13 +18,13 @@
                 tbody
                     tr
                         td 
-                            a(href="#") INF4170 MultiCycle
+                            a(href="#") INF4170-Multicycles
                     tr.info
                         td 
-                            a(href="#") INF4375 Node
+                            a(href="#") INF4375-Node
                     tr
                         td 
-                            a(href="#") INF2005 JS2
+                            a(href="#") INF2005-JS2
 
         when 'etudiant'
             .alert.alert-info
@@ -40,13 +40,10 @@
                 tbody
                     tr
                         td 
-                            a(href="#") INF4170 MultiCycle
+                            a(href="#") INF2005-JS2
                     tr.info
                         td 
-                            a(href="#") INF4375 Node
-                    tr
-                        td 
-                            a(href="#") INF2005 JS2
+                            a(href="#") INF4375-Node
 
         when 'admin'        
             .alert.alert-info
