--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -52,7 +52,7 @@ block primaire
         a(href="#") 
           button.btn#open-pres Démarrer la présentation 
       li
-        a.btn(href='#exporterPresentation', role='button', data-toggle='modal') Exporter la présentation
+        a.btn(href='#exporterPresentation', role='button', data-toggle='modal') Exporter
   
            
     div#remplir
