--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -35,6 +35,8 @@ block contenu
         .form-actions
           button#bouton-sauvegarder.btn.btn-primary(type='submit') Sauvegarder
           button.btn(type='button') Annuler
+        div#msgEditeur
+
       #source-presentation(style="display:none") !{presentationObj}
     //div#saveEditor 
     div#dialog-supprimer(title="Basic dialog", style="display:none")
