--- a/application-express/views/gestion-admin.jade
+++ b/application-express/views/gestion-admin.jade
@@ -64,9 +64,8 @@ block contenu
                     button#btnCreerUtilisateur.btn.btn-primary(type='button', disabled) Créer Utilisateur
           div#importer.tab-pane.fade
             form
-              input.btn.btn-file(type='file')
               button.btn.btn-primary(type='button') Importer Liste
-                      div#importer.tab-pane.fade
+              input(type='file')
           div#supprimer.tab-pane.fade
             form.form-search
               input.input-medium.search-query(type='text')
