--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -56,7 +56,7 @@ block primaire
   
            
     div#remplir
-    iframe#saveEditor(src="/presentation/2.2")
+    iframe#saveEditor.ecran-mini(src="/presentation/2.2")
     script(src='/static/javascripts/pres.js')
 
     include commentaires
